--- a/public/index1.html
+++ b/public/index1.html
@@ -62,6 +62,7 @@
     <x-peers class="center"></x-peers>
     <x-no-peers>
         <h2>ファイルを送信するには、このページを他のデバイスで開きます</h2>
+        <p style="text-align: center;"><button class="button blue-background" id="showQR" style="display: inline-flex;">QR コードを表示</button></p>
     </x-no-peers>
     <x-instructions desktop="クリックでファイルを送信、右クリックでメッセージを送信" mobile="タップでファイルを送信、ロングタップでメッセージを送信"></x-instructions>
     <!-- Footer -->
@@ -70,8 +71,22 @@
             <use xlink:href="#wifi-tethering" />
         </svg>
         <div id="displayName" placeholder="デバイス間でデータを簡単に転送"></div>
-        <div class="font-body2">同じネットワーク上に全員がこのデバイスを見つけられます</div>
+        <div class="font-body2">同じネットワーク上の全員がこのデバイスを見つけられます</div>
     </footer>
+    <!-- QR Dialog -->
+    <x-dialog id="qrDialog">
+        <x-background class="full center">
+            <x-paper shadow="2">
+                <h3>QR コード</h3>
+                <div class='preview' style="text-align: center;">
+                    <img id='img-preview' src="images/qr.png">
+                </div>
+                <div class="row-reverse">
+                    <button class="button" close>閉じる</button>
+                </div>
+            </x-paper>
+        </x-background>
+    </x-dialog>
     <!-- Receive Dialog -->
     <x-dialog id="receiveDialog">
         <x-background class="full center">
