--- a/public/index1.html
+++ b/public/index1.html
@@ -157,7 +157,7 @@
             <div class="font-subheading">デバイス間で簡単にデータを転送できる <a href="https://snapdrop.net" target="_blank" rel="noopener noreferrer">Snapdrop</a> を日本語化した非公式サイトです。
                 <div style="font-size:11px;line-height: 1.7;margin-top: 1em;">
                     Node.js バージョン作成： <a href="https://github.com/Bellisario" target="_blank">Bellisario</a><br>
-                    日本語版作成： <a href="https://github.com/r-40021" target="_blank">Frog</a>
+                    日本語版作成： <a href="https://github.com/r-40021" target="_blank">蛙</a>
                 </div>
             </div>
             <div class="row">
@@ -176,7 +176,7 @@
                         <use xlink:href="#twitter" />
                     </svg>
                 </a>
-                <a class="icon-button" target="_blank" href="https://github.com/r-40021/snapdrop-jp/blob/main/docs/faq.md" title="よくある質問" rel="noreferrer">
+                <a class="icon-button" target="_blank" href="https://github.com/r-40021/snapdrop-jp/wiki" title="よくある質問" rel="noreferrer">
                     <svg class="icon">
                         <use xlink:href="#help-outline" />
                     </svg>
