--- a/public/index1.html
+++ b/public/index1.html
@@ -28,8 +28,8 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <meta name="msapplication-TileImage" content="images/mstile-150x150.png">
     <link rel="fluid-icon" type="image/png" href="images/android-chrome-192x192.png">
-    <meta name="twitter:image" content="https://snap-jp.herokuapp.com/">
-    <meta property="og:image" content="https://snap-jp.herokuapp.com/">
+    <meta name="twitter:image" content="https://snap-jp.herokuapp.com/images/twitter-stream.jpg">
+    <meta property="og:image" content="https://snap-jp.herokuapp.com/images/twitter-stream.jpg">
     <!-- Resources -->
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="manifest" href="manifest.json">
