Add: GoatCounter and Search Console

--- a/public/index1.html
+++ b/public/index1.html
@@ -33,6 +33,9 @@
     <!-- Resources -->
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="manifest" href="manifest.json">
+    <!-- GoatCounter -->
+    <script data-goatcounter="https://snap-jp.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 
 <body translate="no">
