--- a/public/index1.html
+++ b/public/index1.html
@@ -63,8 +63,8 @@
     </header>
     <!-- Peers -->
     <x-peers class="center"></x-peers>
-    <x-no-peers>
-        <h2>このページを他のデバイスで開くと、ファイルを送受信できます</h2>
+    <x-no-peers class="word-break">
+        <h2>この<wbr>ページを<wbr>他の<wbr>デバイスで<wbr>開くと、<wbr>ファイルを<wbr>送受信<wbr>できます</h2>
         <p style="text-align: center;"><button class="button blue-background" id="showQR" style="display: inline-flex;">QR コードを表示</button></p>
     </x-no-peers>
     <x-instructions desktop="クリックしてファイルを送信、右クリックしてメッセージを送信" mobile="タップしてファイルを送信、ロングタップしてメッセージを送信"></x-instructions>
@@ -94,7 +94,7 @@
     <x-dialog id="receiveDialog">
         <x-background class="full center">
             <x-paper shadow="2">
-                <h3>ファイルを受信しました</h3>
+                <h3 class="word-break">ファイルを<wbr>受信<wbr>しました</h3>
                 <div class="font-subheading" id="fileName">ファイル名</div>
                 <div class="font-body2" id="fileSize"></div>
                 <div class='preview' style="visibility: hidden;">
@@ -116,7 +116,7 @@
         <form action="#">
             <x-background class="full center">
                 <x-paper shadow="2">
-                    <h3>メッセージを送信</h3>
+                    <h3 class="word-break">メッセージを<wbr>送信</h3>
                     <div id="textInput" class="textarea" role="textbox" placeholder="送信するメッセージを入力…" autocomplete="off" autofocus contenteditable></div>
                     <div class="row-reverse">
                         <button class="button" type="submit" close>送信</button>
@@ -130,7 +130,7 @@
     <x-dialog id="receiveTextDialog">
         <x-background class="full center">
             <x-paper shadow="2">
-                <h3>メッセージを受信しました</h3>
+                <h3 class="word-break">メッセージを<wbr>受信<wbr>しました</h3>
                 <div class="font-subheading" id="text"></div>
                 <div class="row-reverse">
                     <button class="button" id="copy" close autofocus>コピー</button>
@@ -141,7 +141,7 @@
     </x-dialog>
     <!-- Toast -->
     <div class="toast-container full center">
-        <x-toast class="row" shadow="1" id="toast">ファイルを正常に送信しました</x-toast>
+        <x-toast class="row word-break" shadow="1" id="toast">ファイルを<wbr>正常に<wbr>送信<wbr>しました</x-toast>
     </div>
     <!-- About Page -->
     <x-about id="about" class="full center column">
@@ -157,7 +157,7 @@
                 <use xlink:href="#wifi-tethering" />
             </svg>
             <h1>Snapdrop JP</h1>
-            <div class="font-subheading">デバイス間で簡単にデータを転送できる <a href="https://snapdrop.net" target="_blank" rel="noopener noreferrer">Snapdrop</a> を日本語化した非公式サイトです。
+            <div class="font-subheading word-break">デバイス間で<wbr>簡単に<wbr>データを<wbr>転送できる<wbr> <a href="https://snapdrop.net" target="_blank" rel="noopener noreferrer">Snapdrop</a> を<wbr>日本語化した<wbr>非公式<wbr>サイト<wbr>です。
                 <div style="font-size:11px;line-height: 1.7;margin-top: 1em;">
                     Node.js 版作成： <a href="https://github.com/Bellisario" target="_blank">Bellisario</a><br>
                     日本語版作成： <a href="https://github.com/r-40021" target="_blank">蛙</a>
