--- a/public/index1.html
+++ b/public/index1.html
@@ -64,7 +64,7 @@
     <!-- Peers -->
     <x-peers class="center"></x-peers>
     <x-no-peers class="word-break">
-        <h2>この<wbr>ページを<wbr>他の<wbr>デバイスで<wbr>開くと、<wbr>ファイルを<wbr>送受信<wbr>できます</h2>
+        <h2>ファイルを<wbr>送信する<wbr>には、<wbr>この<wbr>ページを<wbr>他の<wbr>デバイスで<wbr>開きます</h2>
         <p style="text-align: center;"><button class="button blue-background" id="showQR" style="display: inline-flex;">QR コードを表示</button></p>
     </x-no-peers>
     <x-instructions desktop="クリックしてファイルを送信、右クリックしてメッセージを送信" mobile="タップしてファイルを送信、ロングタップしてメッセージを送信"></x-instructions>
