Fix: Duplicated ID

--- a/public/index1.html
+++ b/public/index1.html
@@ -82,7 +82,7 @@
             <x-paper shadow="2">
                 <h3>QR コード</h3>
                 <div class='preview' style="text-align: center;">
-                    <img id='img-preview' src="images/qr.png">
+                    <img src="images/qr.png">
                 </div>
                 <div class="row-reverse">
                     <button class="button" close>閉じる</button>
