--- a/public/index1.html
+++ b/public/index1.html
@@ -5,23 +5,23 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!-- Web App Config -->
-    <title>Snapdrop JP</title>
+    <title>Snapdrop JP - ファイルやテキストを同一ネットワーク上の人と素早く共有できるブラウザアプリ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#3367d6">
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-capable" content="no">
     <meta name="apple-mobile-web-app-title" content="Snapdrop JP">
     <!-- Descriptions -->
-    <meta name="description" content="画像、動画、PDF、URLを近くの人とすぐにシェアできます。面倒な設定や会員登録は必要ありません。">
-    <meta name="keywords" content="File, Transfer, Share, Peer2Peer, ファイル, 転送, 共有, シェア, P2P">
+    <meta name="description" content="画像、動画、PDF、URLを同一ネットワーク上の人と素早く共有。面倒な設定や会員登録は必要ありません。">
+    <meta name="keywords" content="File, Transfer, Share, Peer2Peer, ファイル, 転送, 共有, シェア, P2P, 日本語">
     <meta name="author" content="Frog">
     <meta property="og:title" content="Snapdrop JP">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snap-jp.herokuapp.com/">
     <meta name="twitter:author" content="@FrogApp_">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="画像、動画、PDF、URLを近くの人とすぐにシェアできます。面倒な設定や会員登録は必要ありません。">
-    <meta name="og:description" content="画像、動画、PDF、URLを近くの人とすぐにシェアできます。面倒な設定や会員登録は必要ありません。">
+    <meta name="twitter:description" content="画像、動画、PDF、URLを同一ネットワーク上の人と素早く共有。面倒な設定や会員登録は必要ありません。">
+    <meta name="og:description" content="画像、動画、PDF、URLを同一ネットワーク上の人と素早く共有。面倒な設定や会員登録は必要ありません。">
     <!-- Icons -->
     <link rel="icon" sizes="96x96" href="images/favicon-96x96.png">
     <link rel="shortcut icon" href="images/favicon-96x96.png">
@@ -141,7 +141,7 @@
     </x-dialog>
     <!-- Toast -->
     <div class="toast-container full center">
-        <x-toast class="row word-break" shadow="1" id="toast">ファイルを<wbr>正常に<wbr>送信<wbr>しました</x-toast>
+        <x-toast class="row word-break centered-text" shadow="1" id="toast">ファイルを<wbr>正常に<wbr>送信<wbr>しました</x-toast>
     </div>
     <!-- About Page -->
     <x-about id="about" class="full center column">
