--- a/public/index1.html
+++ b/public/index1.html
@@ -159,6 +159,7 @@
             <h1>Snapdrop JP</h1>
             <div class="font-subheading word-break">デバイス間で<wbr>簡単に<wbr>データを<wbr>転送できる<wbr> <a href="https://snapdrop.net" target="_blank" rel="noopener noreferrer">Snapdrop</a> を<wbr>日本語化した<wbr>非公式<wbr>サイト<wbr>です。
                 <div style="font-size:11px;line-height: 1.7;margin-top: 1em;">
+                    本家「Snapdrop」作成： <a href="https://github.com/RobinLinus" target="_blank">RobinLinus</a><br>
                     Node.js 版作成： <a href="https://github.com/Bellisario" target="_blank">Bellisario</a><br>
                     日本語版作成： <a href="https://github.com/r-40021" target="_blank">蛙</a>
                 </div>
