--- a/public/index1.html
+++ b/public/index1.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#3367d6">
     <meta name="color-scheme" content="dark light">
-    <meta name="apple-mobile-web-app-capable" content="no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Snapdrop JP">
     <!-- Descriptions -->
     <meta name="description" content="画像、動画、PDF、URLを同一ネットワーク上の端末間で素早く共有。面倒な設定や会員登録は必要ありません。">
