--- a/public/index1.html
+++ b/public/index1.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Frog">
     <meta property="og:title" content="Snapdrop JP">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://snap-jp.herokuapp.com/">
+    <meta property="og:url" content="https://share.frogapp.net/">
     <meta name="twitter:author" content="@FrogApp_">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="画像、動画、PDF、URLを同一ネットワーク上の端末間で素早く共有。面倒な設定や会員登録は必要ありません。">
@@ -28,8 +28,8 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <meta name="msapplication-TileImage" content="images/mstile-150x150.png">
     <link rel="fluid-icon" type="image/png" href="images/android-chrome-192x192.png">
-    <meta name="twitter:image" content="https://snap-jp.herokuapp.com/images/twitter-stream.jpg">
-    <meta property="og:image" content="https://snap-jp.herokuapp.com/images/twitter-stream.jpg">
+    <meta name="twitter:image" content="https://share.frogapp.net/images/twitter-stream.jpg">
+    <meta property="og:image" content="https://share.frogapp.net/images/twitter-stream.jpg">
     <!-- Resources -->
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="manifest" href="manifest.json">
@@ -172,7 +172,7 @@
                         <use xlink:href="#monetarization" />
                     </svg>
                 </a>
-                <a class="icon-button" target="_blank" href="https://twitter.com/intent/tweet?text=https://snap-jp.herokuapp.com" title="ツイートして Snapdrop JP を広める" rel="noreferrer">
+                <a class="icon-button" target="_blank" href="https://twitter.com/intent/tweet?text=https://share.frogapp.net" title="ツイートして Snapdrop JP を広める" rel="noreferrer">
                     <svg class="icon">
                         <use xlink:href="#twitter" />
                     </svg>
