--- a/public/index1.html
+++ b/public/index1.html
@@ -259,4 +259,7 @@
         }
         </style>
     </noscript>
+    <!-- Cloudflare Web Analytics -->
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c381567edd2244f8a09accabf52feee2"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </body>
