--- a/public/index1.html
+++ b/public/index1.html
@@ -70,7 +70,7 @@
         <svg class="icon logo">
             <use xlink:href="#wifi-tethering" />
         </svg>
-        <div id="displayName" placeholder="デバイス間でデータを簡単に転送"></div>
+        <div id="displayName" placeholder="このデバイスの表示名: ---"></div>
         <div class="font-body2 word-break">同じ<wbr>ネットワーク上の<wbr>全員が<wbr>この<wbr>デバイスを<wbr>見つけられます</div>
     </footer>
     <!-- QR Dialog -->
