--- a/public/index1.html
+++ b/public/index1.html
@@ -11,6 +11,7 @@
     <meta name="color-scheme" content="dark light">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Snapdrop JP">
+    <link rel="canonical" href="https://share.frogapp.net">
     <!-- Descriptions -->
     <meta name="description" content="画像、動画、PDF、URLを同一ネットワーク上の端末間で素早く共有。面倒な設定や会員登録は必要ありません。">
     <meta name="keywords" content="File, Transfer, Share, Peer2Peer, ファイル, 転送, 共有, シェア, P2P, 日本語">
