--- a/public/index1.html
+++ b/public/index1.html
@@ -62,7 +62,8 @@
     <!-- Peers -->
     <x-peers class="center"></x-peers>
     <x-no-peers class="word-break">
-        <h2 class="open-message">同じ<wbr>ネットワーク上の<wbr>他の<wbr>デバイスで<wbr>このページを<wbr>開いてください</h2>
+        <h2 class="open-message">ファイルを<wbr>送信<wbr>するには、<wbr>他の<wbr>デバイスで <wbr>Snapdrop JP を<wbr>開きます</h2>
+        <p style="text-align: center;margin-bottom: 1.5em;">デバイスは<wbr>同じ<wbr>ネットワークに<wbr>接続されている<wbr>必要が<wbr>あります</p>
         <p style="text-align: center;"><button class="button blue-background" id="showQR" style="display: inline-flex;">QR コードを表示</button></p>
     </x-no-peers>
     <x-instructions desktop="クリックしてファイルを送信、右クリックしてメッセージを送信" mobile="タップしてファイルを送信、ロングタップしてメッセージを送信"></x-instructions>
@@ -71,7 +72,7 @@
         <svg class="icon logo">
             <use xlink:href="#wifi-tethering" />
         </svg>
-        <div id="displayName" placeholder="このデバイスの表示名: - - -"></div>
+        <div id="displayName" placeholder="- - - として検出可能"></div>
         <div class="font-body2 word-break">同じ<wbr>ネットワーク上の<wbr>全員が<wbr>この<wbr>デバイスを<wbr>見つけられます</div>
     </footer>
     <!-- QR Dialog -->
