--- a/public/index1.html
+++ b/public/index1.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="Snapdrop JP">
     <link rel="canonical" href="https://share.frogapp.net">
     <!-- Descriptions -->
-    <meta name="description" content="画像、動画、PDF、URLを同じネットワーク上の端末間で素早く共有。面倒な設定や会員登録は必要ありません。">
+    <meta name="description" content="画像、動画、PDF、URL などのデータやテキストを同じネットワーク上の端末間で素早く安全に共有。面倒な設定や会員登録は必要ありません。">
     <meta name="keywords" content="File, Transfer, Share, Peer2Peer, ファイル, 転送, 共有, シェア, P2P, 日本語">
     <meta name="author" content="Frog">
     <meta property="og:title" content="Snapdrop JP">
@@ -21,8 +21,8 @@
     <meta property="og:url" content="https://share.frogapp.net/">
     <meta name="twitter:author" content="@FrogApp_">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="画像、動画、PDF、URLを同じネットワーク上の端末間で素早く共有。面倒な設定や会員登録は必要ありません。">
-    <meta name="og:description" content="画像、動画、PDF、URLを同じネットワーク上の端末間で素早く共有。面倒な設定や会員登録は必要ありません。">
+    <meta name="twitter:description" content="画像、動画、PDF、URL などのデータやテキストを同じネットワーク上の端末間で素早く安全に共有。面倒な設定や会員登録は必要ありません。">
+    <meta name="og:description" content="画像、動画、PDF、URL などのデータやテキストを同じネットワーク上の端末間で素早く安全に共有。面倒な設定や会員登録は必要ありません。">
     <!-- Icons -->
     <link rel="icon" sizes="96x96" href="images/favicon-96x96.png">
     <link rel="shortcut icon" href="images/favicon-96x96.png">
