Update cloudflare analytics url

--- a/public/index1.html
+++ b/public/index1.html
@@ -297,7 +297,6 @@
         </style>
     </noscript>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
-        data-cf-beacon='{"token": "c381567edd2244f8a09accabf52feee2"}'></script>
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "61edd3403654476c989ac1ebf0c2f598"}'></script>
     <!-- End Cloudflare Web Analytics -->
 </body>
