--- a/public/index1.html
+++ b/public/index1.html
@@ -62,7 +62,7 @@
     <!-- Peers -->
     <x-peers class="center"></x-peers>
     <x-no-peers class="word-break">
-        <h2 class="open-message">ファイルを<wbr>送信<wbr>するには、<wbr>他の<wbr>デバイスで <wbr>Snapdrop JP を<wbr>開きます</h2>
+        <h2 class="open-message">ファイルを<wbr>送信<wbr>するには、<wbr>他の<wbr>デバイスで <wbr>Snapdrop JP を<wbr>開いてください</h2>
         <p style="text-align: center;margin-bottom: 1.5em;">デバイスは<wbr>同じ<wbr>ネットワークに<wbr>接続されている<wbr>必要が<wbr>あります</p>
         <p style="text-align: center;"><button class="button blue-background" id="showQR"
                 style="display: inline-flex;">QR コードを表示</button></p>
