--- a/public/index1.html
+++ b/public/index1.html
@@ -158,8 +158,8 @@
                 <use xlink:href="#wifi-tethering" />
             </svg>
             <h1>Snapdrop JP</h1>
-            <div class="font-subheading word-break">デバイス間で<wbr>簡単に<wbr>データを<wbr>転送できる<wbr> <a
-                    href="https://snapdrop.net" target="_blank" rel="noopener noreferrer">Snapdrop</a>
+            <div class="font-subheading word-break"><a href="https://snapdrop.net" target="_blank"
+                    rel="noopener noreferrer">Snapdrop</a>
                 を<wbr>日本語化した<wbr>非公式<wbr>サイト<wbr>です。
                 <div style="font-size:11px;line-height: 1.7;margin-top: 1em;">
                     本家「Snapdrop」作成： <a href="https://github.com/RobinLinus" target="_blank">RobinLinus</a><br>
@@ -297,6 +297,7 @@
         </style>
     </noscript>
     <!-- Cloudflare Web Analytics -->
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "61edd3403654476c989ac1ebf0c2f598"}'></script>
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "61edd3403654476c989ac1ebf0c2f598"}'></script>
     <!-- End Cloudflare Web Analytics -->
 </body>
